force-app/main/default/objects/Grade__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Grades</relationshipLabel>
    <relationshipName>Grades</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>