force-app/main/default/objects/Grade__c/fields/Class_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Class_Enrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Class Enrollment</label>
    <referenceTo>ClassEnrollment__c</referenceTo>
    <relationshipLabel>Grades</relationshipLabel>
    <relationshipName>Grades</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>