force-app/main/default/objects/Grade__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>