force-app/main/default/objects/Grade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment__c</columns>
    <columns>Class_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>